# voice-live-agent-runtime

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/context/: __init__.py  manager.py
backend/app/phases/: __init__.py  definitions.py  router.py  transitions.py
backend/app/subagent/: __init__.py  oob.py
backend/app/tools/: __init__.py  customer.py  escalation.py  meta.py  order.py  registry.py
backend/app/voicelive/: __init__.py  runtime.py  session.py
backend/tests/: conftest.py  test_config.py  test_context_manager.py  test_oob_subagent.py  test_phase_router.py  test_voicelive_session.py
docs/: architecture.md  phase-design.md
frontend/: index.html
frontend/public/: pcm-worklet.js
frontend/src/: App.tsx  index.css
frontend/src/audio/: player.ts  recorder.ts
frontend/src/components/: PhaseIndicator.tsx  PhaseTransitionLog.tsx  RuntimeContextPanel.tsx  SessionControl.tsx  ToolCallLog.tsx  TranscriptLog.tsx
frontend/src/types/: events.ts
frontend/src/ws/: client.ts
